force-app/main/default/objects/Plan_Message__c/Plan_Message__c.object-meta.xml
<CustomObject>
    <description>One row per message in a copilot conversation. Content carries either plain text (text format) or JSON-serialized Anthropic content blocks (blocks format) so tool_use and tool_result round-trip cleanly across turns.</description>
    <label>Plan Message</label>
    <nameField>
        <displayFormat>MSG-{0000000000}</displayFormat>
        <label>Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>