force-app/main/default/objects/Plan_Message__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>Either plain text or JSON-serialized blocks (per Content_Format__c). Long Text Area max 131K chars — sufficient for multi-tool assistant turns.</description>
    <label>Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>