force-app/main/default/objects/Plan_Message__c/fields/Content_Format__c.field-meta.xml
<CustomField>
    <fullName>Content_Format__c</fullName>
    <description>text = Content__c is a plain string. blocks = Content__c is a JSON-serialized array of Anthropic content blocks (text / tool_use / tool_result).</description>
    <label>Content Format</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>text</fullName><default>true</default><label>text</label></value>
            <value><fullName>blocks</fullName><default>false</default><label>blocks</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>