force-app/main/default/objects/Plan_Message__c/fields/Conversation__c.field-meta.xml
<CustomField>
    <fullName>Conversation__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Parent conversation. Cascade-delete keeps message rows from orphaning if a conversation is removed.</description>
    <label>Conversation</label>
    <referenceTo>Plan_Conversation__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>