force-app/main/default/objects/Plan_Message__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <description>Denormalized from the parent Plan_Conversation__c for filter performance. Stays in sync via Apex on insert.</description>
    <externalId>true</externalId>
    <label>Customer Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>