force-app/main/default/objects/Plan_Message__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>user</fullName><default>false</default><label>user</label></value>
            <value><fullName>assistant</fullName><default>false</default><label>assistant</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>