force-app/main/default/objects/Plan_Message__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Monotonic per-conversation order. Ordered ASC for replay.</description>
    <label>Sequence</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>